# TaskFlow

./: .env.example  .gitattributes  .gitignore  README.md  README.ru.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  20260629_1138_40ac44e74642_new_start.py  20260629_1200_align_task_enums_with_spec.py  20260629_1300_seed_default_admin.py
app/: main.py
app/api/: auth_router.py  mappers.py  openapi_responses.py  task_router.py
app/core/: bootstrap.py  client_ip.py  config.py  cors.py  cors_constants.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  health.py  rate_limit.py  security.py
app/domain/: auth.py  mappers.py  task.py  task_ownership.py  task_status.py  task_types.py  user.py
app/models/: base.py  task.py  user.py
app/persistence/: mappers.py
app/repositories/: base.py  task_repository.py  user_repository.py
app/schemas/: auth.py  common.py  task.py
app/services/: auth_service.py  task_service.py
frontend/: .env.example  package-lock.json  package.json  playwright.config.ts  playwright.smoke.config.ts  vite.config.ts
frontend/e2e/: admin.spec.ts  auth.spec.ts  errors.spec.ts  smoke.spec.ts  tasks.spec.ts
frontend/e2e/helpers/: api.ts  auth.ts  errors.ts  tasks.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: auth.test.ts  auth.ts  authEvents.test.ts  authEvents.ts  client.test.ts  client.ts  errors.test.ts  errors.ts  tasks.test.ts  tasks.ts
frontend/src/components/: AppLayout.tsx  AuthGate.tsx  AuthenticatedLayout.tsx  CreateForm.test.tsx  (+21 more)
scripts/: seed_admin.py  seed_e2e_users.py
tests/: conftest.py  http_client.py  test_main.py
tests/api/: conftest.py  test_auth.py  test_auth_security.py  test_errors.py  test_rate_limit.py  test_tasks.py  test_tasks_pagination.py
tests/core/: test_bootstrap.py  test_client_ip.py  test_concurrency.py  test_config.py  test_cors.py  test_database.py  test_dependencies.py  test_health.py  test_security.py
tests/domain/: test_exceptions.py  test_task_ownership.py  test_task_status.py
tests/performance/: conftest.py  test_tasks_performance.py  timing.py
tests/repositories/: conftest.py  test_task_repository.py  test_user_repository.py
tests/schemas/: test_task_schemas.py
tests/services/: test_task_service.py
(+20 files in other folders)
